src/objects/Obligation__c.object
<CustomObject>
    <description>List all customer obligations like loan, credit card, letter of credit</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Obligations</relationshipLabel>
        <relationshipName>Obligations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Card_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <description>Credit Limit</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Derivative_Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Derivative_Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FX_Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FX_Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Availbility__c</fullName>
        <formula>IF(End_Date__c &gt;= TODAY(),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Availbility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maturity_date__c</fullName>
        <description>Maturity date</description>
        <label>Maturity date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Obligation_ID__c</fullName>
        <description>Obligation ID</description>
        <externalId>true</externalId>
        <label>Obligation ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Obligations</relationshipLabel>
        <relationshipName>Obligations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origination_Balance__c</fullName>
        <description>Origination Balance</description>
        <label>Origination Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Letter of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derivative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Obligation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{0000000000}</displayFormat>
        <label>Obligation Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Obligations</pluralLabel>
    <recordTypes>
        <fullName>Card</fullName>
        <active>true</active>
        <label>Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Derivative</fullName>
        <active>true</active>
        <label>Derivative</label>
    </recordTypes>
    <recordTypes>
        <fullName>FX</fullName>
        <active>true</active>
        <label>FX</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loan</fullName>
        <active>true</active>
        <label>Loan</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>